tests/valid/StaticVar_Valid_1.whiley
int x = 1

method test():
    assert x == 1